25 January 2024
toML function: Removed the space before the slash in empty tags (void elements).
nestML function: If a </html> tag is present, make sure there also is a <html> tag

14 November 2023
Improved error messages when something is wrong in function call in UFP object.

13 November 2023
Fixed signed/unsigned bug in FPU that could result in a negative denominator
due to left shifting a large enough positive number by 52 bits.

10 November 2023
Embed `normal' Bracmat expression in UFP object using eval'(expression).
For now, no value is passed to or returned from eval. (This might change.)
Expression can export data from UFP object.

12 October 2023
Fixed: argument of 'idx$(array, args)' can be complex expression that evaluates
to a number. 

9 October 2023
Minor fix of indentation algorithm.

27 September 2023
numbercheck: Accept hexadecimal floating point notation: chars a-f A-F.

26 September 2023
numbercheck: Accept fixed point notation having more than one digits before
the dot.

25 September 2023
UFP: Passing value that cannot be represented as a double results in failure.
Handle errors in consistent way; err$ can redirect or silence error messages.
Documented err$ function.

24 September 2023
Further debugged and improved export of double values from UFP.
Export as integer not limited to range INT64_MIN < val <= INT64_MAX

22 September 2023
Fixed bug in export from UFP object of double as fraction ('Q' option).
This did not handle integer values correctly.

11 September 2023
In UFP object, renamed 'range' to 'extent'.

5 September 2023
Using int64_t (C99: stdint.h, inttypes.h) to cast double to integer and convert
double to a rational number in decimal notation. Also used in subroot(), x2d
and d2x. The 32-bit version uses int64_t as well.
Removed the whitespace behind the result of exporting from a UFP object in `Q'
format. (There was no good reason to have that whitespace.)

29 August 2023