@@ -1,6 +1,7 @@
 25 January 2024
 toML function: Removed the space before the slash in empty tags (void elements).
 nestML function: If a </html> tag is present, make sure there also is a <html> tag
+nestML function: explicitly close non-empty elements such as in <p>abra<p>cadabra.
 
 14 November 2023
 Improved error messages when something is wrong in function call in UFP object.
